# shairplay

./: configure.ac
src/: Makefile.am  shairplay.c
